# dbass

./: .prettierrc.js  README.md  angular.json  package-lock.json  package.json  tsconfig.json
server/: README.md  countries.db  countries.sql  database.db  pragha.db  pyproject.toml
server/.vim/: coc-settings.json
server/dchanel_server/: app.py  execute.py  schema.py  sql_parser.py
server/sandbox/: a.http  b.http
src/: index.html  styles.scss
src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts
src/app/component/data-panel/: data-panel.component.ts
src/app/component/editor/: editor.component.html  editor.component.scss  editor.component.ts
src/app/component/editor-status-bar/: editor-status-bar.component.html  editor-status-bar.component.scss  editor-status-bar.component.ts
src/app/component/header-bar/: header-bar.component.html  header-bar.component.ts
src/app/model/: index.ts
src/app/service/: api.service.ts  sql-query-analysis.service.ts
src/lib/snowflake-id/: index.ts
ui/: .prettierrc.js  README.md  package.json
ui/src/: polyfills.ts  test.ts
ui/src/app/: app.component.ts  app.module.ts
ui/src/app/component/basic-status-bar/: basic-status-bar.component.html  basic-status-bar.component.scss  basic-status-bar.component.ts
ui/src/app/component/data-panel/: data-panel.component.html  (+2 more)
ui/src/app/model/: index.ts  svg-icons.ts
ui/src/app/pipe/: safe-html.pipe.ts
ui/src/app/service/: api.service.ts  app.service.ts
ui/src/app/worker/: parser.worker.ts
ui/src/lib/sql-parser/: index.ts  lexer.ts  parser.ts
(+11 files in other folders)
