[tool.poetry]
name = "dchanel_server"
version = "0.1.0"
description = ""
authors = ["francium <francium@francium.cc>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0"

[tool.poetry.dev-dependencies]
ipython = "^7.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
